--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 
    <h2>Title start with AB</h2>
    <div class="user-ab"></div>
+   <button class="add-a">
+      Title starts with A
+   </button>
+   <button class="add-ab">
+      Title starts with AB
+   </button>
+   <button class="add-all">
+      Title starts with A and AB
+   </button>
    <script src="/script.js"></script>
 </body>
 </html>
